--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="cart-content">
-          <div class="cart-items-section">
+          <div class="cart-items-section" id="cart-items-container">
             <div class="cart-items-header">
               <h2>Cart Items (<span id="cart-items-count">0</span>)</h2>
               <button class="clear-cart-btn" id="clear-cart-btn">
@@ -58,7 +58,7 @@
             </div>
           </div>
 
-          <div class="cart-summary-section">
+          <div class="cart-summary-section" id="cart-summary-container">
             <div class="cart-summary-card">
               <h3>Order Summary</h3>
 
@@ -273,14 +273,6 @@
     <script
       type="module"
       src="assets/scripts/modules/footer-module.js"
-    ></script>
-    <script
-      type="module"
-      src="assets/scripts/modules/cart-management.js"
-    ></script>
-    <script
-      type="module"
-      src="assets/scripts/modules/notification-system.js"
     ></script>
     <script type="module" src="assets/scripts/modules/cart-page.js"></script>
   </body>
