--- a/catalog.html
+++ b/catalog.html
@@ -167,16 +167,6 @@
             <div class="catalog-grid" id="catalog-grid">
               <!-- Games will be loaded dynamically -->
             </div>
-
-            <div class="catalog-pagination">
-              <button class="pagination-btn" id="prev-page" disabled>
-                ← Previous
-              </button>
-              <div class="page-numbers" id="page-numbers">
-                <!-- Page numbers will be generated dynamically -->
-              </div>
-              <button class="pagination-btn" id="next-page">Next →</button>
-            </div>
           </div>
         </div>
 
@@ -224,6 +214,9 @@
       type="module"
       src="assets/scripts/modules/notification-system.js"
     ></script>
-    <script type="module" src="assets/scripts/modules/catalog-page.js"></script>
+    <script
+      type="module"
+      src="assets/scripts/modules/catalog-page-module.js"
+    ></script>
   </body>
 </html>
