--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,22 @@
                   id="search-input"
                   placeholder="Search games..."
                 />
-                <button id="search-btn">🔍</button>
+                <button id="search-btn" title="Search">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                  </svg>
+                </button>
               </div>
             </div>
 
@@ -149,19 +164,6 @@
                   <option value="release-date">Release Date</option>
                 </select>
               </div>
-
-              <div class="view-options">
-                <button
-                  class="view-btn active"
-                  data-view="grid"
-                  title="Grid View"
-                >
-                  ⊞
-                </button>
-                <button class="view-btn" data-view="list" title="List View">
-                  ☰
-                </button>
-              </div>
             </div>
 
             <div class="catalog-grid" id="catalog-grid">
@@ -172,22 +174,88 @@
 
         <div class="catalog-features">
           <div class="feature-card">
-            <div class="feature-icon">🎮</div>
+            <div class="feature-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <line x1="6" y1="9" x2="6" y2="15"></line>
+                <line x1="10" y1="9" x2="10" y2="15"></line>
+                <rect x="2" y="4" width="20" height="16" rx="2"></rect>
+                <path d="M18 9h2v6h-2z"></path>
+                <path d="m14 9-2 3 2 3"></path>
+              </svg>
+            </div>
             <h3>Huge Selection</h3>
             <p>Browse hundreds of games across all genres and platforms</p>
           </div>
           <div class="feature-card">
-            <div class="feature-icon">⚡</div>
+            <div class="feature-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <polygon
+                  points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
+                ></polygon>
+              </svg>
+            </div>
             <h3>Instant Download</h3>
             <p>Get your games immediately after purchase</p>
           </div>
           <div class="feature-card">
-            <div class="feature-icon">🛡️</div>
+            <div class="feature-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+              </svg>
+            </div>
             <h3>Secure Shopping</h3>
             <p>Safe and encrypted payment processing</p>
           </div>
           <div class="feature-card">
-            <div class="feature-icon">🔄</div>
+            <div class="feature-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <polyline points="23 4 23 10 17 10"></polyline>
+                <polyline points="1 20 1 14 7 14"></polyline>
+                <path
+                  d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
+                ></path>
+              </svg>
+            </div>
             <h3>Easy Returns</h3>
             <p>30-day money-back guarantee on all purchases</p>
           </div>
