--- a/about.html
+++ b/about.html
@@ -17,113 +17,139 @@
     <div id="header-container"></div>
 
     <main class="about-page-main">
-      <div class="about-page-container">
-        <div class="about-hero-section">
-          <div class="about-hero-content">
-            <h1 class="about-hero-title">Our Story</h1>
-            <p class="about-hero-subtitle">
-              From passionate gamers to industry innovators, we're dedicated to
-              bringing you the best gaming experiences.
+      <div class="about-hero-section">
+        <div class="about-page-container">
+          <h1 class="about-hero-title">Forged in Pixels, Driven by Passion</h1>
+          <p class="about-hero-subtitle">
+            PixelVault is more than a store; it's a universe crafted by gamers,
+            for gamers. We're on a mission to deliver legendary digital
+            adventures directly to your vault.
+          </p>
+        </div>
+      </div>
+
+      <div class="about-page-container content-sections">
+        <!-- Our Mission Section -->
+        <section class="about-section mission-section">
+          <div class="mission-content">
+            <h2 class="section-title">Our Mission</h2>
+            <p class="section-text">
+              To curate an unparalleled collection of digital games, ensuring
+              every title is a gateway to an unforgettable experience. We bridge
+              the gap between epic developers and eager players with seamless,
+              secure, and instant delivery.
             </p>
+            <div class="mission-stats">
+              <div class="stat-item">
+                <span class="stat-number">10K+</span>
+                <span class="stat-label">Happy Gamers</span>
+              </div>
+              <div class="stat-item">
+                <span class="stat-number">500+</span>
+                <span class="stat-label">Curated Titles</span>
+              </div>
+              <div class="stat-item">
+                <span class="stat-number">24/7</span>
+                <span class="stat-label">Instant Access</span>
+              </div>
+            </div>
           </div>
-        </div>
+          <div class="mission-visual">
+            <img
+              src="assets/public/community-highlight.jpg"
+              alt="PixelVault Community"
+            />
+          </div>
+        </section>
 
-        <div class="about-content">
-          <section class="mission-section">
-            <div class="mission-content">
-              <h2>Our Mission</h2>
+        <!-- Our Values Section -->
+        <section class="about-section values-section">
+          <h2 class="section-title">Our Core Values</h2>
+          <div class="values-grid">
+            <div class="value-card">
+              <div class="value-icon">
+                <img
+                  src="assets/public/advantage-vault.jpg"
+                  alt="Gaming Excellence"
+                />
+              </div>
+              <h3>Gamer-Centric</h3>
               <p>
-                At PixelVault, we believe that gaming is more than just
-                entertainment—it's a way to connect, explore, and create
-                unforgettable experiences. Our mission is to curate the finest
-                collection of PC and Xbox games, making premium gaming
-                accessible to everyone.
+                Every decision is made with the player in mind, from our catalog
+                selection to our platform's user experience.
               </p>
-              <div class="mission-stats">
-                <div class="stat-item">
-                  <span class="stat-number">10K+</span>
-                  <span class="stat-label">Happy Customers</span>
-                </div>
-                <div class="stat-item">
-                  <span class="stat-number">500+</span>
-                  <span class="stat-label">Games Available</span>
-                </div>
-                <div class="stat-item">
-                  <span class="stat-number">24/7</span>
-                  <span class="stat-label">Support</span>
-                </div>
-              </div>
             </div>
-          </section>
+            <div class="value-card">
+              <div class="value-icon">
+                <img
+                  src="assets/public/advantage-cloud.jpg"
+                  alt="Trust & Transparency"
+                />
+              </div>
+              <h3>Trust & Transparency</h3>
+              <p>
+                We believe in clear communication and secure transactions,
+                building a community founded on trust.
+              </p>
+            </div>
+            <div class="value-card">
+              <div class="value-icon">
+                <img src="assets/public/game-1.jpg" alt="Innovation" />
+              </div>
+              <h3>Relentless Innovation</h3>
+              <p>
+                Pushing the boundaries of digital distribution to enhance your
+                journey from discovery to download.
+              </p>
+            </div>
+          </div>
+        </section>
 
-          <section class="values-section">
-            <h2>Our Values</h2>
-            <div class="values-grid">
-              <div class="value-card">
-                <div class="value-icon">🎮</div>
-                <h3>Gaming Excellence</h3>
-                <p>
-                  We handpick every game to ensure quality and enjoyment for our
-                  community.
-                </p>
-              </div>
-              <div class="value-card">
-                <div class="value-icon">🤝</div>
-                <h3>Community First</h3>
-                <p>
-                  Our players are at the heart of everything we do. We listen,
-                  learn, and grow together.
-                </p>
-              </div>
-              <div class="value-card">
-                <div class="value-icon">🔒</div>
-                <h3>Trust & Security</h3>
-                <p>
-                  Your security and privacy are our top priorities. Shop with
-                  confidence.
-                </p>
-              </div>
-              <div class="value-card">
-                <div class="value-icon">💡</div>
-                <h3>Innovation</h3>
-                <p>
-                  We constantly evolve to bring you the latest gaming technology
-                  and experiences.
-                </p>
-              </div>
+        <!-- Our Team Section -->
+        <section class="about-section team-section">
+          <h2 class="section-title">The Architects of PixelVault</h2>
+          <div class="team-grid">
+            <div class="team-member">
+              <img
+                src="assets/public/avatar-1.jpg"
+                alt="Alex Chen"
+                class="team-member-avatar"
+              />
+              <h3 class="team-member-name">Alex Chen</h3>
+              <p class="team-member-role">Founder & Lead Strategist</p>
             </div>
-          </section>
+            <div class="team-member">
+              <img
+                src="assets/public/game-2.jpg"
+                alt="Sarah Johnson"
+                class="team-member-avatar"
+              />
+              <h3 class="team-member-name">Sarah Johnson</h3>
+              <p class="team-member-role">Head of Curation</p>
+            </div>
+            <div class="team-member">
+              <img
+                src="assets/public/game-3.jpg"
+                alt="Mike Rodriguez"
+                class="team-member-avatar"
+              />
+              <h3 class="team-member-name">Mike Rodriguez</h3>
+              <p class="team-member-role">Lead Platform Engineer</p>
+            </div>
+          </div>
+        </section>
 
-          <section class="team-section">
-            <h2>Meet Our Team</h2>
-            <div class="team-grid">
-              <div class="team-member">
-                <div class="member-avatar">👨‍💼</div>
-                <h3>Alex Chen</h3>
-                <p class="member-role">Founder & CEO</p>
-                <p class="member-bio">
-                  Gaming enthusiast with 15+ years in the industry.
-                </p>
-              </div>
-              <div class="team-member">
-                <div class="member-avatar">👩‍💻</div>
-                <h3>Sarah Johnson</h3>
-                <p class="member-role">Head of Operations</p>
-                <p class="member-bio">
-                  Ensuring smooth operations and customer satisfaction.
-                </p>
-              </div>
-              <div class="team-member">
-                <div class="member-avatar">👨‍🎨</div>
-                <h3>Mike Rodriguez</h3>
-                <p class="member-role">Creative Director</p>
-                <p class="member-bio">
-                  Crafting amazing user experiences and visual design.
-                </p>
-              </div>
-            </div>
-          </section>
-        </div>
+        <!-- Call to Action Section -->
+        <section class="about-section cta-section">
+          <h2 class="section-title">Ready to Level Up?</h2>
+          <p class="section-text">
+            Your next great adventure is just a click away. Dive into our
+            curated collection and find your next favorite game.
+          </p>
+          <a href="catalog.html" class="cta-button btn primary-btn"
+            >Explore the Vault</a
+          >
+        </section>
       </div>
     </main>
 
