--- a/contact.html
+++ b/contact.html
@@ -27,96 +27,6 @@
         </div>
 
         <div class="contact-content">
-          <div class="contact-info-section">
-            <div class="contact-info-card">
-              <h2>Get in Touch</h2>
-              <p>
-                Our support team is available 24/7 to help you with any
-                questions or concerns.
-              </p>
-
-              <div class="contact-methods">
-                <div class="contact-method">
-                  <div class="method-icon">📧</div>
-                  <div class="method-content">
-                    <h3>Email Support</h3>
-                    <p>support@pixelvault.com</p>
-                    <span class="response-time">Response within 2 hours</span>
-                  </div>
-                </div>
-
-                <div class="contact-method">
-                  <div class="method-icon">💬</div>
-                  <div class="method-content">
-                    <h3>Live Chat</h3>
-                    <p>Available 24/7</p>
-                    <span class="response-time">Instant response</span>
-                  </div>
-                </div>
-
-                <div class="contact-method">
-                  <div class="method-icon">📞</div>
-                  <div class="method-content">
-                    <h3>Phone Support</h3>
-                    <p>+1 (555) 123-4567</p>
-                    <span class="response-time">Mon-Fri 9AM-6PM EST</span>
-                  </div>
-                </div>
-
-                <div class="contact-method">
-                  <div class="method-icon">🏢</div>
-                  <div class="method-content">
-                    <h3>Office Address</h3>
-                    <p>
-                      123 Gaming Street<br />Tech City, TC 12345<br />United
-                      States
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="social-links">
-                <h3>Follow Us</h3>
-                <div class="social-icons">
-                  <a href="#" class="social-icon" aria-label="Twitter">
-                    <span>🐦</span>
-                  </a>
-                  <a href="#" class="social-icon" aria-label="Facebook">
-                    <span>📘</span>
-                  </a>
-                  <a href="#" class="social-icon" aria-label="Instagram">
-                    <span>📷</span>
-                  </a>
-                  <a href="#" class="social-icon" aria-label="Discord">
-                    <span>🎮</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div class="office-hours-card">
-              <h3>Office Hours</h3>
-              <div class="hours-list">
-                <div class="hours-item">
-                  <span class="day">Monday - Friday</span>
-                  <span class="time">9:00 AM - 6:00 PM EST</span>
-                </div>
-                <div class="hours-item">
-                  <span class="day">Saturday</span>
-                  <span class="time">10:00 AM - 4:00 PM EST</span>
-                </div>
-                <div class="hours-item">
-                  <span class="day">Sunday</span>
-                  <span class="time">Closed</span>
-                </div>
-              </div>
-              <div class="timezone-note">
-                <span class="timezone-icon">🌍</span>
-                <span>All times are in Eastern Standard Time (EST)</span>
-              </div>
-            </div>
-          </div>
-
           <div class="contact-form-section">
             <div class="contact-form-card">
               <h2>Send us a Message</h2>
@@ -181,28 +91,6 @@
                   ></textarea>
                 </div>
 
-                <div class="form-group">
-                  <label class="checkbox-label">
-                    <input type="checkbox" id="newsletter" name="newsletter" />
-                    <span class="checkmark"></span>
-                    Subscribe to our newsletter for updates and exclusive offers
-                  </label>
-                </div>
-
-                <div class="form-group">
-                  <label class="checkbox-label">
-                    <input
-                      type="checkbox"
-                      id="privacy"
-                      name="privacy"
-                      required
-                    />
-                    <span class="checkmark"></span>
-                    I agree to the <a href="privacy.html">Privacy Policy</a> and
-                    consent to being contacted
-                  </label>
-                </div>
-
                 <div class="form-actions">
                   <button
                     type="submit"
@@ -221,101 +109,84 @@
               </form>
             </div>
           </div>
-        </div>
 
-        <div class="map-section">
-          <h2>Find Our Office</h2>
-          <div class="map-container">
-            <div class="map-placeholder" id="map-placeholder">
-              <div class="map-content">
-                <div class="map-icon">🗺️</div>
-                <h3>Interactive Map</h3>
-                <p>Our office is located in the heart of Tech City</p>
-                <div class="map-address">
-                  <strong>PixelVault Gaming</strong><br />
-                  123 Gaming Street<br />
-                  Tech City, TC 12345<br />
-                  United States
+          <div class="contact-info-section">
+            <div class="contact-info-card">
+              <h2>Get in Touch</h2>
+              <p>
+                Our support team is available 24/7 to help you with any
+                questions or concerns.
+              </p>
+
+              <div class="contact-methods">
+                <div class="contact-method">
+                  <div class="method-icon">📧</div>
+                  <div class="method-content">
+                    <h3>Email Support</h3>
+                    <p>support@pixelvault.com</p>
+                    <span class="response-time">Response within 2 hours</span>
+                  </div>
                 </div>
-                <button class="open-map-btn secondary-btn" id="open-map-btn">
-                  Open in Google Maps
-                </button>
+
+                <div class="contact-method">
+                  <div class="method-icon">📞</div>
+                  <div class="method-content">
+                    <h3>Phone Support</h3>
+                    <p>+1 (555) 123-4567</p>
+                    <span class="response-time">Mon-Fri 9AM-6PM EST</span>
+                  </div>
+                </div>
+
+                <div class="contact-method">
+                  <div class="method-icon">🏢</div>
+                  <div class="method-content">
+                    <h3>Office Address</h3>
+                    <p>
+                      123 Gaming Street<br />Tech City, TC 12345<br />United
+                      States
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="office-hours-card">
+              <h3>Office Hours</h3>
+              <div class="hours-list">
+                <div class="hours-item">
+                  <span class="day">Monday - Friday</span>
+                  <span class="time">9:00 AM - 6:00 PM EST</span>
+                </div>
+                <div class="hours-item">
+                  <span class="day">Saturday</span>
+                  <span class="time">10:00 AM - 4:00 PM EST</span>
+                </div>
+                <div class="hours-item">
+                  <span class="day">Sunday</span>
+                  <span class="time">Closed</span>
+                </div>
+              </div>
+              <div class="timezone-note">
+                <span class="timezone-icon">🌍</span>
+                <span>All times are in Eastern Standard Time (EST)</span>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="faq-section">
-          <h2>Frequently Asked Questions</h2>
-          <div class="faq-list">
-            <div class="faq-item">
-              <div class="faq-question">
-                <h3>How do I download my purchased games?</h3>
-                <span class="faq-toggle">+</span>
-              </div>
-              <div class="faq-answer">
-                <p>
-                  After completing your purchase, you'll receive an email with
-                  download instructions. You can also access your games directly
-                  from your account dashboard.
-                </p>
-              </div>
-            </div>
-
-            <div class="faq-item">
-              <div class="faq-question">
-                <h3>What is your refund policy?</h3>
-                <span class="faq-toggle">+</span>
-              </div>
-              <div class="faq-answer">
-                <p>
-                  We offer a 30-day money-back guarantee for all digital games.
-                  If you're not satisfied with your purchase, contact our
-                  support team for a full refund.
-                </p>
-              </div>
-            </div>
-
-            <div class="faq-item">
-              <div class="faq-question">
-                <h3>Do you support multiple platforms?</h3>
-                <span class="faq-toggle">+</span>
-              </div>
-              <div class="faq-answer">
-                <p>
-                  Yes! We offer games for both PC and Xbox platforms. Each game
-                  listing clearly shows which platforms are supported.
-                </p>
-              </div>
-            </div>
-
-            <div class="faq-item">
-              <div class="faq-question">
-                <h3>How secure is my payment information?</h3>
-                <span class="faq-toggle">+</span>
-              </div>
-              <div class="faq-answer">
-                <p>
-                  We use industry-standard SSL encryption and partner with
-                  secure payment processors like Stripe to ensure your payment
-                  information is always protected.
-                </p>
-              </div>
-            </div>
-
-            <div class="faq-item">
-              <div class="faq-question">
-                <h3>Can I gift games to friends?</h3>
-                <span class="faq-toggle">+</span>
-              </div>
-              <div class="faq-answer">
-                <p>
-                  Currently, we don't offer direct gifting, but you can purchase
-                  games and share the download links with friends. We're working
-                  on adding a gifting feature soon!
-                </p>
-              </div>
-            </div>
+        <div class="map-section">
+          <h2>Find Our Office</h2>
+          <div class="map-container">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.2219901290355!2d-74.00369368400567!3d40.71312937933185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a23e28c1191%3A0x49f75d3281df052a!2s150%20Park%20Row%2C%20New%20York%2C%20NY%2010007%2C%20USA!5e0!3m2!1sen!2s!4v1640995200000!5m2!1sen!2s"
+              width="100%"
+              height="400"
+              style="border: 0; border-radius: 20px"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+              title="PixelVault Gaming Office Location"
+            ></iframe>
           </div>
         </div>
       </div>
@@ -324,6 +195,28 @@
     <div id="footer-container"></div>
 
     <div id="notification-container"></div>
+
+    <!-- Contact Form Modal -->
+    <div id="contact-modal" class="contact-modal">
+      <div class="modal-overlay" id="modal-overlay"></div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title" id="modal-title">Notification</h3>
+          <button class="modal-close" id="modal-close" aria-label="Close modal">
+            ×
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="modal-icon" id="modal-icon">📧</div>
+          <p class="modal-message" id="modal-message">
+            Your message has been sent successfully!
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button class="modal-btn primary-btn" id="modal-btn">OK</button>
+        </div>
+      </div>
+    </div>
 
     <script
       type="module"
